[Fix Bug 951513] Curator alignment
Squashed commits:
restored curator detail layout placement.
removed unnecessary nesting
removed unnecessary margins from curated group info box contents.

--- a/mozillians/static/mozillians/css/main.less
+++ b/mozillians/static/mozillians/css/main.less
@@ -1702,6 +1702,7 @@ body#group-show {
             list-style: none;
             text-align: left;
             margin-bottom: 10px;
+            margin-left:0;
             li {
                 margin: 0;
                 padding: 0;
